@startuml
skinparam shadowing false
skinparam defaultFontName "Noto Sans CJK SC"
hide methods
hide stereotypes

entity "users" as users {
  * id : TEXT <<PK>>
  --
  display_name : TEXT
  real_e164 : TEXT <<UNIQUE>>
  caller_endpoint : TEXT <<UNIQUE>>
  enabled : INTEGER
  created_at : TEXT
  updated_at : TEXT
}

entity "virtual_numbers" as virtual_numbers {
  * id : INTEGER <<PK>>
  --
  e164 : TEXT <<UNIQUE>>
  enabled : INTEGER
  created_at : TEXT
  updated_at : TEXT
}

entity "trunks" as trunks {
  * id : INTEGER <<PK>>
  --
  name : TEXT <<UNIQUE>>
  type : TEXT
  enabled : INTEGER
  is_default : INTEGER
  server : TEXT
  username : TEXT
  password : TEXT
  from_domain : TEXT
}

entity "id_mappings" as id_mappings {
  * id : INTEGER <<PK>>
  --
  callee_e164 : TEXT <<UNIQUE>>
  virtual_number_id : INTEGER <<FK>>
  updated_at : TEXT
}

entity "calls" as calls {
  * id : TEXT <<PK>>
  --
  caller_user_id : TEXT <<FK>>
  caller_real_e164 : TEXT
  callee_e164 : TEXT
  selected_virtual_number_id : INTEGER <<FK>>
  selected_virtual_e164 : TEXT
  trunk_name : TEXT
  dial_target : TEXT
  action_id : TEXT
  status : TEXT
  bridge_status : TEXT
  failure_reason : TEXT
  requested_by : TEXT
  timeout_sec : INTEGER
  created_at : TEXT
  started_at : TEXT
  ended_at : TEXT
  updated_at : TEXT
}

entity "call_legs" as call_legs {
  * id : INTEGER <<PK>>
  --
  call_id : TEXT <<FK>>
  leg_type : TEXT
  channel : TEXT
  status : TEXT
  hangup_cause : TEXT
  created_at : TEXT
  updated_at : TEXT
}

users ||--o{ calls : caller_user_id
virtual_numbers ||--o{ calls : selected_virtual_number_id
virtual_numbers ||--o{ id_mappings : virtual_number_id
calls ||--o{ call_legs : call_id

note bottom of calls
  status 示例：
  created/originating/ringing/
  answered/bridged/completed/failed
end note

note bottom of call_legs
  每个 call 固定两条腿：
  leg_type = A / B
  UNIQUE(call_id, leg_type)
end note

@enduml
